# payobills

./: .envrc copy  .gitignore  .plzconfig  BUILD  CLAUDE.md  README.md  TODOs.md  package-lock.json  package.json  pants.toml  template.envrc
.cicd/common/: .gitversion.yml  semver-yeasy.sh
.github/workflows/: ci.yml  docker_buildx-on-tag-publish.yml  gitversion.yml  run-plz.yml
.specify/: extensions.yml  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
ai/plans/: transaction-summary-page.md
apps/agent/: README.md
apps/transaction-parser/: BUILD  Cargo.toml  README.md
apps/transaction-parser/AI/: ai-analysis.md
apps/transaction-parser/k8s/: Chart.yaml  values.yaml
apps/transaction-parser/src/: lib.rs  main.rs
apps/transaction-parser/src/api/: mod.rs  parses.rs
apps/transaction-parser/src/cli/: mod.rs
apps/transaction-parser/src/payobills/: currency_sync.rs  mod.rs  regex_store.rs  slm_client.rs  transaction_parser.rs
apps/transaction-parser/tests/: process_transactions_test.rs  transaction_text_parsing.rs
devenv/: BUILD  README.md
docs/: business-intent.md  international-currency-normalization.md  nocodb-schema-as-code.md  plan.md  sample-transaction-regexes.md  slm-transaction-parsing.md  template-prompt.md  trip-date-ranges.md
mock-data/: currencies.json
plugins/: BUILD
scripts/: add_currency_notes.py  import_currencies.py
(+483 files in other folders)
