[package]
name = "payobills"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "transaction-parser"
path = "src/main.rs"

[dependencies]
csv = "1.1"
serde = "1.0"
serde_derive = "1.0"
clap = { version = "4.1", features = ["derive"] }
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.39.2", features = ["full"] }
serde_json = "1.0.125"
notion = "0.6.0"
chrono = "0.4.38"
jiff = "0.1.24"
isahc = "1.7.2"

[dev-dependencies]
httpmock = "0.7.0"
mockito = "1.7.0"
test-case = "3.3.1"
